# TwiTN

./: .env.example  .gitignore  Containerfile  README.md  app.py  docker-compose.yml  export_openapi_spec.py  functions.sql  generate_dotenv.sh  main.py  mock.sql  openapi_spec.json  pyproject.toml  schema.sql
api/: Post.py  Reactions.py  User.py  __init__.py  tags.py
back/: Containerfile  README.md  app.py  export_openapi_spec.py  openapi_spec.json  pyproject.toml
back/api/: Attachments.py  Post.py  Reactions.py  User.py  __init__.py  tags.py
back/db/: __init__.py
back/db/api/: Post.py  Reaction.py  User.py  __init__.py
back/db/model/: Post.py  PostTree.py  Reaction.py  User.py  __init__.py
back/db/services/: post.py  post_tree.py  reaction.py
back/lib/: UUIDConverter.py  __init__.py  make_error.py  security.py  session.py
back/server/: server.py
back/structures/: Post.py  User.py  __init__.py
back/tests/: conftest.py  test_Post.py  test_Reaction.py  test_User.py  test_post.py
db/api/: Post.py  Reaction.py  User.py  __init__.py
db/model/: Post.py  Reaction.py  User.py
front/: package.json
front/components/: background.html  footer.html  navigation.html
front/js/: api.js  auth.js  home.js  passwordVisibility.js
front/pages/: home.html  login.html  signup.html
lib/: __init__.py  responses.py
schema/: 0-schema.sql  2-mock.sql
server/: server.py
structures/: Paging.py  Post.py  Reaction.py  User.py  __init__.py
tests/: conftest.py
www/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
www/js/: home.js
(+28 files in other folders)
