[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-openapi3[swagger]>=4.3.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg[binary]>=3.3.2",
    "gunicorn>=23.0.0",
    "flask-session[cachelib]>=0.8.0",
    "pytest>=9.0.2",
    "pytest-order>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
